After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 696653 - resizing columns in History window hangs user interface
resizing columns in History window hangs user interface
Status: RESOLVED FIXED
Product: epiphany
Classification: Core
Component: History
3.8.x (obsolete)
Other Linux
: Normal normal
: ---
Assigned To: Epiphany Maintainers
Epiphany Maintainers
: 704175 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2013-03-26 15:53 UTC by Adam Dingle
Modified: 2013-11-26 12:04 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Call parent class on button release (706 bytes, patch)
2013-11-24 00:41 UTC, Daniel Wyatt
reviewed Details | Review
Alternatively, we could just go back to using a signal here (938 bytes, patch)
2013-11-24 00:54 UTC, Daniel Wyatt
none Details | Review
Call parent class on button release (791 bytes, patch)
2013-11-26 01:29 UTC, Daniel Wyatt
needs-work Details | Review
Call parent class on button release (659 bytes, patch)
2013-11-26 10:14 UTC, Daniel Wyatt
committed Details | Review

Description Adam Dingle 2013-03-26 15:53:21 UTC
I'm running Epiphany 3.8.0 on Ubuntu 13.4 (Raring).  I have libgtk 3.7.12.

When I attempt to resize the columns in the History window by moving the slider between the Title and Address columns, Epiphany hangs.  In fact, the entire desktop hangs: no matter where I move the mouse cursor, it looks like the resize column cursor and when I click anywhere nothing happens.  I have to log into another virtual terminal and kill my session to continue working.

I wonder whether this bug is specific to Ubuntu.
Comment 1 Claudio Saavedra 2013-03-26 16:08:05 UTC
If the whole desktop hangs then it's probably a WM issue. Could you try with a different one or the gnome shell for example?
Comment 2 Xan Lopez 2013-03-26 16:09:09 UTC
I can repro this here, seems like a GTK+ bug too. The desktop is not hanging, but you cannot do anything because the cursor is stuck.
Comment 3 Adam Dingle 2013-03-27 12:48:15 UTC
Since Xan sees this too (and I'm pretty sure he runs GNOME Shell) I think we can remove the NEEDINFO status.  Xan, can you set the status to NEW or ASSIGNED?
Comment 4 Xan Lopez 2013-03-27 17:50:00 UTC
Sure, it is a real bug.
Comment 5 Matthew Gatto 2013-07-16 00:02:08 UTC
*** Bug 704175 has been marked as a duplicate of this bug. ***
Comment 6 Adam Dingle 2013-11-10 12:54:09 UTC
This is still happening in git master with GTK 3.10.2.
Comment 7 Daniel Wyatt 2013-11-24 00:36:23 UTC
This is a regression from commit 12c23 where middle-click support was added.
I'll submit a patch.
Comment 8 Daniel Wyatt 2013-11-24 00:41:25 UTC
Created attachment 261330 [details] [review]
Call parent class on button release
Comment 9 Daniel Wyatt 2013-11-24 00:54:33 UTC
Created attachment 261331 [details] [review]
Alternatively, we could just go back to using a signal here
Comment 10 Daniel Wyatt 2013-11-24 01:01:02 UTC
Ignore the alternative patch, won't work.
First patch will work. :)
Comment 11 Claudio Saavedra 2013-11-25 10:02:29 UTC
Review of attachment 261330 [details] [review]:

Good catch. Shouldn't the patch do something akin to what is done in ephy_history_view_butto_press() (that is, only call the parent class handler when the event is not happening on the bin window)?
Comment 12 Daniel Wyatt 2013-11-26 01:29:33 UTC
Created attachment 262803 [details] [review]
Call parent class on button release
Comment 13 Claudio Saavedra 2013-11-26 09:50:38 UTC
Review of attachment 262803 [details] [review]:

::: lib/widgets/ephy-history-view.c
@@ +108,3 @@
 
+  if (event->window != gtk_tree_view_get_bin_window (GTK_TREE_VIEW (treeview)))
+    GTK_WIDGET_CLASS (ephy_history_view_parent_class)->button_release_event (treeview, event);

This is missing the return. We only want to handle the middle click when the event window is the bin window. Check the button_press() handler.

@@ -119,3 @@
     gtk_tree_path_free (path);
   }
-

No need for this.
Comment 14 Daniel Wyatt 2013-11-26 10:14:49 UTC
Created attachment 262817 [details] [review]
Call parent class on button release

Sorry about the silly mistakes. Third time's the charm?
Comment 15 Claudio Saavedra 2013-11-26 10:25:56 UTC
Review of attachment 262817 [details] [review]:

Patch is missing a commit message, I suppose you'll add one (and a reference to this bug report). Also commit to the stable branch. Thank you!
Comment 16 Daniel Wyatt 2013-11-26 10:48:48 UTC
So just add a commit message, reference this bug, and toss the patch up here?
Also, which branch is stable? It isn't clear to me.
Comment 17 Claudio Saavedra 2013-11-26 10:53:44 UTC
Do you have commit rights? If so, please commit it to both master and gnome-3-10 branches. If you don't have a git account I can commit it for you. No need to upload it here.
Comment 18 Daniel Wyatt 2013-11-26 10:55:40 UTC
I don't have commit rights, so if you could go ahead and commit it, that will work. :)
Comment 19 Claudio Saavedra 2013-11-26 11:08:17 UTC
I pushed to master, gnome-3-10, and gnome-3-8 in case anyone is still shipping from that branch.
Comment 20 Adam Dingle 2013-11-26 12:04:24 UTC
Thanks, Daniel and Claudio!  Actually I'm still running 3.8 and it's very helpful to have this fix on that branch too.