ephy-history-view: Call parent class on button release handler

https://bugzilla.gnome.org/show_bug.cgi?id=696653